--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,38 @@
-opencv-python>=4.11.0
-mediapipe>=0.10.14
-numpy>=2.2.0
-scipy>=1.15.0
-PyQt6>=6.9.0
-matplotlib>=3.10.0
-pandas>=1.3.0
-pyqt6-qt6>=6.9.0
-pyqt6-sip>=13.10.0
-pillow>=11.0.0
-dlib>=19.24.0
-pyperclip>=1.9.0
-sounddevice>=0.5.0
-pyvirtualcam>=0.12.0
-wmi>=1.5.0
-pywin32>=310 
+absl-py==2.2.2
+attrs==25.3.0
+cffi==1.17.1
+contourpy==1.3.2
+cycler==0.12.1
+dlib==19.24.8
+flatbuffers==25.2.10
+fonttools==4.58.0
+jax==0.6.0
+jaxlib==0.6.0
+kiwisolver==1.4.8
+matplotlib==3.10.3
+mediapipe==0.10.14
+ml-dtypes==0.5.1
+numpy==2.2.5
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opt-einsum==3.4.0
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
+protobuf==4.25.7
+pycparser==2.22
+pyparsing==3.2.3
+pyperclip==1.9.0
+pyqt6==6.9.0
+pyqt6-qt6==6.9.0
+pyqt6-sip==13.10.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyvirtualcam==0.12.1
+pywin32==310
+pywin64==0.1.2
+scipy==1.15.2
+six==1.17.0
+sounddevice==0.5.1
+tzdata==2025.2
+wmi==1.5.1
